<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright © 2012 Michael Castleman.
  ~
  ~ This program is free software. It comes without any warranty, to
  ~ the extent permitted by applicable law. You can redistribute it
  ~ and/or modify it under the terms of the Do What The Fuck You Want
  ~ To Public License, Version 2, as published by Sam Hocevar. See
  ~ http://sam.zoy.org/wtfpl/COPYING for more details.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:text="@string/can_i_take"/>
  <com.ridewithbikes.NoDefaultSpinner android:id="@+id/system_spinner"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:paddingBottom="4dp"
           android:gravity="left|center_vertical"
           android:prompt="@string/system_prompt"/>
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="@string/at"/>
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
    <Button android:id="@+id/date_button"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"/>
    <Button android:id="@+id/time_button"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:text="@string/question_mark"/>
  </LinearLayout>
</merge>