<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright © 2011 Michael Castleman.
  ~
  ~ This program is free software. It comes without any warranty, to
  ~ the extent permitted by applicable law. You can redistribute it
  ~ and/or modify it under the terms of the Do What The Fuck You Want
  ~ To Public License, Version 2, as published by Sam Hocevar. See
  ~ http://sam.zoy.org/wtfpl/COPYING for more details.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/side_padding"
              android:paddingRight="@dimen/side_padding"
              android:paddingTop="@dimen/vertical_padding"
              android:paddingBottom="@dimen/vertical_padding">
  <TextView android:id="@+id/main_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/vertical_padding"
            style="@style/TitleText"
            android:text="@string/app_name"/>
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:text="@string/can_i_take"/>
  <com.ridewithbikes.NoDefaultSpinner android:id="@+id/system_spinner"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:paddingBottom="4dp"
           android:gravity="left|center_vertical"
           android:prompt="@string/system_prompt"/>
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="@string/at"/>
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
    <Button android:id="@+id/date_button"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"/>
    <Button android:id="@+id/time_button"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:text="@string/question_mark"/>
  </LinearLayout>
  <ScrollView android:id="@+id/result_pane"
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:background="@color/semitransparent_white"
              android:visibility="gone">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingTop="4dp"
                  android:paddingBottom="4dp"
                  android:paddingLeft="8dp"
                  android:paddingRight="8dp">
      <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/result_text"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:textColor="@color/purple"
                android:paddingBottom="8dp"/>
      <TextView android:id="@+id/result_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
  </ScrollView>
</LinearLayout>

